Fixed the country dropdown selection button
it was extending out of the screen at small width. Now it's scaled
accordingly

--- a/haedrian/static/css/custom.css
+++ b/haedrian/static/css/custom.css
@@ -56,6 +56,10 @@
     width: 100%;
 }
 
+#id_country {
+    width: 100%;
+}
+
 #sign_up_submit {
     float: right;
 }
